--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ h1, .first-screen__title,
 
 h2,
 .h2 {
-  font-size: 36px;
+  font-size: 35px;
 }
 
 h3,
@@ -269,6 +269,18 @@ input[type=radio] + label::before {
 .btn:focus {
   box-shadow: none;
 }
+.btn-lg {
+  padding: 21px 32px 20px;
+  font-size: 16px;
+  letter-spacing: 0.1px;
+  font-weight: 400;
+}
+.btn-lg .icon {
+  margin: 0 -14px 0 54px;
+  width: 27px;
+  height: 27px;
+  transition: 0.3s;
+}
 
 .btn-primary {
   background-color: #e58d35;
@@ -288,17 +300,6 @@ input[type=radio] + label::before {
   border-color: #89c249;
 }
 
-.btn-lg {
-  padding: 19.6px 30px;
-  font-size: 16px;
-}
-.btn-lg .icon {
-  margin: 0 -14px 0 47px;
-  width: 27px;
-  height: 27px;
-  transition: 0.3s;
-}
-
 section, .first-screen {
   margin-top: 0;
   margin-left: auto;
@@ -310,15 +311,15 @@ section:last-of-type, .first-screen:last-of-type {
   margin-bottom: 56px;
 }
 section.container-fluid, .container-fluid.first-screen {
-  padding: 90px 85px 100px;
+  padding: 92px 85px 90px;
   position: relative;
 }
 section.container-fluid:before, .container-fluid.first-screen:before {
   content: "";
   border-radius: 20px;
   position: absolute;
-  left: 42px;
-  right: 42px;
+  left: 50px;
+  right: 50px;
   top: 0;
   height: 100%;
   background-color: #363a4d;
@@ -331,11 +332,12 @@ section:nth-child(odd) .template-title:after, .first-screen:nth-child(odd) .temp
 .template-title {
   text-align: center;
   position: relative;
-  padding-bottom: 18px;
-  margin-bottom: 50px;
+  padding-bottom: 20px;
+  margin-bottom: 46px;
 }
 .template-title h2 {
   line-height: 124.5%;
+  letter-spacing: 0.6px;
   text-transform: uppercase;
   margin-bottom: 6px;
   font-weight: 700;
@@ -349,14 +351,14 @@ section:nth-child(odd) .template-title:after, .first-screen:nth-child(odd) .temp
   content: "";
   position: absolute;
   left: 50%;
-  top: calc(100% - 2px);
+  top: calc(100% - 7px);
   transform: translate(-50%, 0);
   width: 85px;
   height: 2px;
   background-color: #89c249;
 }
 .template-title.col-lg-7 {
-  margin-bottom: 35px;
+  margin-bottom: 32px;
   text-align: left;
 }
 .template-title.col-lg-7 h2:after {
@@ -491,7 +493,7 @@ ul.slick-dots button {
 }
 
 header .navbar {
-  padding: 25px 0 34px;
+  padding: 21px 0 34px;
 }
 header .navbar-nav {
   max-width: 635px;
@@ -595,11 +597,11 @@ header .hamburger--spin.is-active .hamburger-inner::after {
   margin-bottom: 8px;
   max-width: 463px;
   text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1.5;
+  font-weight: 700;
+  line-height: 1.26;
 }
 .first-screen__subtitle {
-  margin-bottom: 40px;
+  margin-bottom: 36px;
   max-width: 345px;
   font-size: 20px;
   font-style: normal;
@@ -618,7 +620,7 @@ header .hamburger--spin.is-active .hamburger-inner::after {
   width: 100%;
   margin: 0 auto;
   align-items: center;
-  padding: 0 92px 60px;
+  padding: 0 92px 64px;
 }
 .first-screen .first-screen-nav {
   position: absolute;
@@ -719,6 +721,11 @@ header .hamburger--spin.is-active .hamburger-inner::after {
   top: -10px;
   border-radius: 50%;
 }
+.advanage-title {
+  max-width: 263px;
+  text-align: center;
+  padding: 0 26px;
+}
 .advanage .advantage-img {
   max-width: 100%;
 }
@@ -731,8 +738,7 @@ header .hamburger--spin.is-active .hamburger-inner::after {
 @media (min-width: 992px) {
   .calculation {
     overflow-x: clip;
-    padding-top: 41px;
-    margin-bottom: 113px;
+    margin-bottom: 118px;
   }
   .calculation-form {
     min-width: 625px;
@@ -766,7 +772,7 @@ header .hamburger--spin.is-active .hamburger-inner::after {
     padding: 0 20px;
   }
   header .navbar {
-    padding: 16px 0 15px;
+    padding: 14px 0 15px;
   }
   header .navbar-collapse {
     display: flex;
@@ -841,12 +847,15 @@ header .hamburger--spin.is-active .hamburger-inner::after {
   .first-screen__item .btn {
     width: 295px;
   }
+  .first-screen__item .btn.btn-lg {
+    padding: 17px 32px 23px;
+  }
   .first-screen__item .btn.btn-lg .icon {
-    margin: 0 -14px 0 37px;
+    margin: 0 -14px 0 52px;
   }
   .first-screen__title {
     font-size: 32px;
-    margin: -10px auto 14px;
+    margin: -10px auto 10px;
     padding: 0 40px;
   }
   .first-screen__subtitle {
